добавлены правки ДЗ №3