@@ -1,8 +1,10 @@
 package edu.hw3;
 
+import edu.hw3.Task8.Task8;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
@@ -11,7 +13,7 @@ public class Task8Test {
     @Test
     @DisplayName("Проверка работы BackwardIterator")
     void backwardIteratorTest() {
-        Task8.BackwardIterator<Integer> backwardIterator = new Task8.BackwardIterator<>(List.of(1, 2, 3));
+        Task8.BackwardIterator<Integer> backwardIterator = new Task8.BackwardIterator<>(Arrays.asList(1, 2, 3, null));
 
         ArrayList<Integer> outputArray = new ArrayList<>();
 
@@ -19,8 +21,9 @@ public class Task8Test {
             outputArray.add(backwardIterator.next());
         }
 
-        assertThat(outputArray.get(0)).isEqualTo(3);
-        assertThat(outputArray.get(1)).isEqualTo(2);
-        assertThat(outputArray.get(2)).isEqualTo(1);
+        assertThat(outputArray.get(0)).isEqualTo(null);
+        assertThat(outputArray.get(1)).isEqualTo(3);
+        assertThat(outputArray.get(2)).isEqualTo(2);
+        assertThat(outputArray.get(3)).isEqualTo(1);
     }
 }
